--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 message("Building in ${CMAKE_BUILD_TYPE} mode")
 
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -g -p")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -g -p -Wconversion")
 set(CMAKE_CXX_FLAGS_RELEASE "-ggdb -Ofast -fstrict-aliasing -DNDEBUG -march=native")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -ggdb -Ofast -fstrict-aliasing -march=native")
 
@@ -29,8 +29,20 @@ add_library(${PROJECT_NAME} STATIC
 if(TESTING)
   add_subdirectory(test)
   enable_testing()
+
   add_test(NAME WBitsVec_Test COMMAND WBitsVec_Test)
+
   add_test(NAME BitVec_Test COMMAND BitVec_Test)
+
+  add_test(NAME RankVec_Test COMMAND RankVec_Test)
+
+  add_test(NAME SVec_Test COMMAND SVec_Test)
+
+  add_test(NAME WBitsVec_Benchmark COMMAND WBitsVec_Benchmark)
+  set_tests_properties(WBitsVec_Benchmark PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;Error;error")
+
+  add_test(NAME BasicSearch_Benchmark COMMAND BasicSearch_Benchmark)
+  set_tests_properties(BasicSearch_Benchmark PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;Error;error")
 endif(TESTING)
 
 
