CMAKE_SOURCE_DIR -> CMAKE_CURRENT_SOURCE_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -ggdb -Ofast -fstrict-aliasing -march=nat
 
 project(Basics)
 
-include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(${PROJECT_NAME} STATIC
   BitsUtil.cpp
@@ -55,22 +55,24 @@ endif(TESTING)
 
 
 #### Doxygen
-set(DOXYGEN_EXCLUDE "${CMAKE_SOURCE_DIR}/cmdline.h")
+set(DOXYGEN_EXCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/cmdline.h")
 
-find_package(Doxygen)
-if(DOXYGEN_FOUND)
-  set(DOXYGEN_CONF_FILE "doxygen.conf")
-  set(DOXYGEN_CONF_PATH ${CMAKE_CURRENT_BINARY_DIR}/${DOXYGEN_CONF_FILE})
-  set(DOXYGEN_SOURCE_DIR ${CMAKE_SOURCE_DIR})
-  set(DOXYGEN_TARGET "doc")
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+  find_package(Doxygen)
+  if(DOXYGEN_FOUND)
+    set(DOXYGEN_CONF_FILE "doxygen.conf")
+    set(DOXYGEN_CONF_PATH ${CMAKE_CURRENT_BINARY_DIR}/${DOXYGEN_CONF_FILE})
+    set(DOXYGEN_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+    set(DOXYGEN_TARGET "doc")
 
-  configure_file(${DOXYGEN_CONF_FILE}.in ${DOXYGEN_CONF_PATH})
+    configure_file(${DOXYGEN_CONF_FILE}.in ${DOXYGEN_CONF_PATH})
 
-  add_custom_target(${DOXYGEN_TARGET}
-                    ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_PATH}
-		    DEPENDS ${DOXYGEN_CONF_PATH})
-  message("\"$ make doc\" to run Doxygen")
-else(DOXYGEN_FOUND)
-  message(WARNING "doxygen binary couldn't be found")
-endif(DOXYGEN_FOUND)
+    add_custom_target(${DOXYGEN_TARGET}
+                      ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_PATH}
+                      DEPENDS ${DOXYGEN_CONF_PATH})
+    message("\"$ make doc\" to run Doxygen")
+  else(DOXYGEN_FOUND)
+    message(WARNING "doxygen binary couldn't be found")
+  endif(DOXYGEN_FOUND)
+endif(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 
