--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,6 +29,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
 #### Generate executable file
 add_executable(WBitsVec_Test ${CMAKE_CURRENT_SOURCE_DIR}/WBitsVec_Test.cpp ${CMAKE})
+add_executable(WBitsBlockVec_Test ${CMAKE_CURRENT_SOURCE_DIR}/WBitsBlockVec_Test.cpp ${CMAKE})
 add_executable(BitVec_Test ${CMAKE_CURRENT_SOURCE_DIR}/BitVec_Test.cpp ${CMAKE})
 add_executable(RankVec_Test ${CMAKE_CURRENT_SOURCE_DIR}/RankVec_Test.cpp ${CMAKE})
 add_executable(SVec_Test ${CMAKE_CURRENT_SOURCE_DIR}/SVec_Test.cpp ${CMAKE})
@@ -36,11 +37,13 @@ add_executable(StepCode_Test ${CMAKE_CURRENT_SOURCE_DIR}/StepCode_Test.cpp ${CMA
 
 add_executable(BitsUtil_Benchmark ${CMAKE_CURRENT_SOURCE_DIR}/BitsUtil_Benchmark.cpp ${CMAKE})
 add_executable(WBitsVec_Benchmark ${CMAKE_CURRENT_SOURCE_DIR}/WBitsVec_Benchmark.cpp ${CMAKE})
+add_executable(WBitsBlockVec_Benchmark ${CMAKE_CURRENT_SOURCE_DIR}/WBitsBlockVec_Benchmark.cpp ${CMAKE})
 add_executable(BasicSearch_Benchmark ${CMAKE_CURRENT_SOURCE_DIR}/BasicSearch_Benchmark.cpp ${CMAKE})
 add_executable(BlockVec_Benchmark ${CMAKE_CURRENT_SOURCE_DIR}/BlockVec_Benchmark.cpp ${CMAKE})
 
 #### Link libraries
 target_link_libraries(WBitsVec_Test Basics gtest gtest_main pthread)
+target_link_libraries(WBitsBlockVec_Test Basics gtest gtest_main pthread)
 target_link_libraries(BitVec_Test Basics gtest gtest_main pthread)
 target_link_libraries(RankVec_Test Basics gtest gtest_main pthread)
 target_link_libraries(SVec_Test Basics gtest gtest_main pthread)
@@ -48,5 +51,6 @@ target_link_libraries(StepCode_Test Basics gtest gtest_main pthread)
 
 target_link_libraries(BitsUtil_Benchmark Basics)
 target_link_libraries(WBitsVec_Benchmark Basics)
+target_link_libraries(WBitsBlockVec_Benchmark Basics)
 target_link_libraries(BasicSearch_Benchmark Basics)
 target_link_libraries(BlockVec_Benchmark Basics)
